src/objects/Client_Service__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Client Services</relationshipLabel>
        <relationshipName>Client_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmed_By__c</fullName>
        <label>Confirmed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Confirmed_By</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <formula>Service__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Client Services</relationshipLabel>
        <relationshipName>Client_Services</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Therapist__c</fullName>
        <label>Therapist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lynette</fullName>
                </value>
                <value>
                    <fullName>Annie</fullName>
                </value>
                <value>
                    <fullName>Liza</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Client Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_Time__c</columns>
        <columns>Discount__c</columns>
        <columns>Service__c</columns>
        <columns>Confirmed_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Client Service ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>